// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Snapshots > renders dashboard empty state - snapshot 1`] = `
<div>
  <div
    class="space-y-8"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <p
          class="text-sm text-muted-foreground mb-1"
        >
          Buenas noches
        </p>
        <h1
          class="text-2xl font-semibold tracking-tight"
        >
          TestCreator
        </h1>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-background hover:text-accent-foreground rounded-md gap-2 h-9 px-4 font-medium transition-all border-emerald-500/50 text-emerald-500 hover:bg-emerald-500/10"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
        />
        Activo
      </button>
    </div>
    <div
      class="grid grid-cols-2 lg:grid-cols-4 gap-4"
    >
      <div
        class="col-span-2 p-5 rounded-2xl bg-gradient-to-br from-emerald-500/10 via-emerald-500/5 to-transparent border border-emerald-500/20"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-dollar-sign w-4 h-4 text-emerald-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
          <span
            class="text-xs font-medium text-emerald-500/80 uppercase tracking-wide"
          >
            Ingresos 30d
          </span>
        </div>
        <div
          class="flex items-baseline gap-3"
        >
          <span
            class="text-3xl font-semibold"
          >
            €
            15.000
          </span>
          <span
            class="text-sm text-emerald-500"
          >
            €
            2500
             via bot
          </span>
        </div>
      </div>
      <div
        class="p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          <span
            class="text-xs font-medium text-muted-foreground uppercase tracking-wide"
          >
            Mensajes
          </span>
        </div>
        <span
          class="text-2xl font-semibold"
        >
          0
        </span>
      </div>
      <div
        class="p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-users w-4 h-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
          <span
            class="text-xs font-medium text-muted-foreground uppercase tracking-wide"
          >
            Contactos
          </span>
        </div>
        <span
          class="text-2xl font-semibold"
        >
          0
        </span>
      </div>
    </div>
    <div
      class="grid grid-cols-3 gap-4"
    >
      <div
        class="p-4 rounded-xl bg-card/50 border border-border/30"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Leads
          </span>
          <svg
            class="lucide lucide-zap w-3.5 h-3.5 text-amber-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            />
          </svg>
        </div>
        <span
          class="text-xl font-semibold"
        >
          0
        </span>
      </div>
      <div
        class="p-4 rounded-xl bg-card/50 border border-border/30"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Clientes
          </span>
          <svg
            class="lucide lucide-user-check w-3.5 h-3.5 text-emerald-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <polyline
              points="16 11 18 13 22 9"
            />
          </svg>
        </div>
        <span
          class="text-xl font-semibold"
        >
          12
        </span>
      </div>
      <div
        class="p-4 rounded-xl bg-card/50 border border-border/30"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Conversión
          </span>
          <svg
            class="lucide lucide-trending-up w-3.5 h-3.5 text-blue-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
        </div>
        <span
          class="text-xl font-semibold"
        >
          15
          %
        </span>
      </div>
    </div>
    <div
      class="p-5 rounded-2xl bg-card border border-border/50"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <h3
          class="text-sm font-medium"
        >
          Escalaciones
        </h3>
      </div>
      <div
        class="flex items-center gap-3 p-3 rounded-lg bg-emerald-500/5"
      >
        <div
          class="w-8 h-8 rounded-full bg-emerald-500/10 flex items-center justify-center shrink-0"
        >
          <svg
            class="lucide lucide-circle-check w-4 h-4 text-emerald-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <div>
          <p
            class="text-sm font-medium"
          >
            Todo al día
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            No hay conversaciones pendientes
          </p>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-5 gap-6"
    >
      <div
        class="lg:col-span-3 p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center justify-between mb-4"
        >
          <h3
            class="text-sm font-medium"
          >
            Actividad semanal
          </h3>
          <span
            class="text-xs text-muted-foreground"
          >
            Conversaciones activas
          </span>
        </div>
        <div
          class="h-[160px]"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%; min-width: 0;"
          />
        </div>
      </div>
      <div
        class="lg:col-span-2 p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center justify-between mb-4"
        >
          <h3
            class="text-sm font-medium"
          >
            Leads calientes
          </h3>
          <a
            class="text-xs text-primary hover:text-primary/80 transition-colors flex items-center gap-1"
            href="/leads"
          >
            Ver todos
            <svg
              class="lucide lucide-chevron-right w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="text-center py-8 text-muted-foreground"
          >
            <p
              class="text-sm"
            >
              Sin leads calientes
            </p>
            <p
              class="text-xs mt-1"
            >
              El bot está trabajando
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Dashboard Snapshots > renders dashboard error state - snapshot 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center h-[60vh] gap-3"
  >
    <svg
      class="lucide lucide-circle-alert w-8 h-8 text-destructive/60"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      class="text-sm text-muted-foreground"
    >
      Error al cargar datos
    </p>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Dashboard Snapshots > renders dashboard loading state - snapshot 1`] = `
<div>
  <div
    class="space-y-8 animate-pulse"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <div
          class="h-4 w-24 bg-muted/40 rounded mb-2"
        />
        <div
          class="h-7 w-40 bg-muted/40 rounded"
        />
      </div>
      <div
        class="h-9 w-24 bg-muted/40 rounded-lg"
      />
    </div>
    <div
      class="grid grid-cols-2 lg:grid-cols-4 gap-4"
    >
      <div
        class="col-span-2 h-28 rounded-2xl bg-muted/30"
      />
      <div
        class="h-28 rounded-2xl bg-muted/30"
      />
      <div
        class="h-28 rounded-2xl bg-muted/30"
      />
    </div>
    <div
      class="grid grid-cols-3 gap-4"
    >
      <div
        class="h-20 rounded-xl bg-muted/20"
      />
      <div
        class="h-20 rounded-xl bg-muted/20"
      />
      <div
        class="h-20 rounded-xl bg-muted/20"
      />
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-5 gap-6"
    >
      <div
        class="lg:col-span-3 h-52 rounded-2xl bg-muted/20"
      />
      <div
        class="lg:col-span-2 h-52 rounded-2xl bg-muted/20"
      />
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Dashboard Snapshots > renders dashboard with stats - snapshot 1`] = `
<div>
  <div
    class="space-y-8"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <p
          class="text-sm text-muted-foreground mb-1"
        >
          Buenas noches
        </p>
        <h1
          class="text-2xl font-semibold tracking-tight"
        >
          TestCreator
        </h1>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-background hover:text-accent-foreground rounded-md gap-2 h-9 px-4 font-medium transition-all border-emerald-500/50 text-emerald-500 hover:bg-emerald-500/10"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
        />
        Activo
      </button>
    </div>
    <div
      class="grid grid-cols-2 lg:grid-cols-4 gap-4"
    >
      <div
        class="col-span-2 p-5 rounded-2xl bg-gradient-to-br from-emerald-500/10 via-emerald-500/5 to-transparent border border-emerald-500/20"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-dollar-sign w-4 h-4 text-emerald-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
          <span
            class="text-xs font-medium text-emerald-500/80 uppercase tracking-wide"
          >
            Ingresos 30d
          </span>
        </div>
        <div
          class="flex items-baseline gap-3"
        >
          <span
            class="text-3xl font-semibold"
          >
            €
            15.000
          </span>
          <span
            class="text-sm text-emerald-500"
          >
            €
            2500
             via bot
          </span>
        </div>
      </div>
      <div
        class="p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          <span
            class="text-xs font-medium text-muted-foreground uppercase tracking-wide"
          >
            Mensajes
          </span>
        </div>
        <span
          class="text-2xl font-semibold"
        >
          1250
        </span>
      </div>
      <div
        class="p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center gap-2 mb-3"
        >
          <svg
            class="lucide lucide-users w-4 h-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
          <span
            class="text-xs font-medium text-muted-foreground uppercase tracking-wide"
          >
            Contactos
          </span>
        </div>
        <span
          class="text-2xl font-semibold"
        >
          450
        </span>
      </div>
    </div>
    <div
      class="grid grid-cols-3 gap-4"
    >
      <div
        class="p-4 rounded-xl bg-card/50 border border-border/30"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Leads
          </span>
          <svg
            class="lucide lucide-zap w-3.5 h-3.5 text-amber-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
            />
          </svg>
        </div>
        <span
          class="text-xl font-semibold"
        >
          35
        </span>
      </div>
      <div
        class="p-4 rounded-xl bg-card/50 border border-border/30"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Clientes
          </span>
          <svg
            class="lucide lucide-user-check w-3.5 h-3.5 text-emerald-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <polyline
              points="16 11 18 13 22 9"
            />
          </svg>
        </div>
        <span
          class="text-xl font-semibold"
        >
          12
        </span>
      </div>
      <div
        class="p-4 rounded-xl bg-card/50 border border-border/30"
      >
        <div
          class="flex items-center justify-between mb-2"
        >
          <span
            class="text-xs text-muted-foreground"
          >
            Conversión
          </span>
          <svg
            class="lucide lucide-trending-up w-3.5 h-3.5 text-blue-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
        </div>
        <span
          class="text-xl font-semibold"
        >
          15
          %
        </span>
      </div>
    </div>
    <div
      class="p-5 rounded-2xl bg-card border border-border/50"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <h3
          class="text-sm font-medium"
        >
          Escalaciones
        </h3>
      </div>
      <div
        class="flex items-center gap-3 p-3 rounded-lg bg-emerald-500/5"
      >
        <div
          class="w-8 h-8 rounded-full bg-emerald-500/10 flex items-center justify-center shrink-0"
        >
          <svg
            class="lucide lucide-circle-check w-4 h-4 text-emerald-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <div>
          <p
            class="text-sm font-medium"
          >
            Todo al día
          </p>
          <p
            class="text-xs text-muted-foreground"
          >
            No hay conversaciones pendientes
          </p>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-5 gap-6"
    >
      <div
        class="lg:col-span-3 p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center justify-between mb-4"
        >
          <h3
            class="text-sm font-medium"
          >
            Actividad semanal
          </h3>
          <span
            class="text-xs text-muted-foreground"
          >
            Conversaciones activas
          </span>
        </div>
        <div
          class="h-[160px]"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%; min-width: 0;"
          />
        </div>
      </div>
      <div
        class="lg:col-span-2 p-5 rounded-2xl bg-card border border-border/50"
      >
        <div
          class="flex items-center justify-between mb-4"
        >
          <h3
            class="text-sm font-medium"
          >
            Leads calientes
          </h3>
          <a
            class="text-xs text-primary hover:text-primary/80 transition-colors flex items-center gap-1"
            href="/leads"
          >
            Ver todos
            <svg
              class="lucide lucide-chevron-right w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </a>
        </div>
        <div
          class="space-y-2"
        >
          <a
            class="flex items-center justify-between p-3 rounded-lg bg-muted/30 hover:bg-muted/50 transition-colors cursor-pointer group"
            href="/inbox?id=u1"
          >
            <div
              class="flex items-center gap-3 min-w-0"
            >
              <div
                class="w-8 h-8 rounded-full bg-rose-500/10 flex items-center justify-center shrink-0"
              >
                <svg
                  class="lucide lucide-zap w-3.5 h-3.5 text-rose-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                  />
                </svg>
              </div>
              <span
                class="text-sm font-medium truncate"
              >
                Hot Lead
              </span>
            </div>
            <div
              class="flex items-center gap-2 shrink-0"
            >
              <span
                class="text-xs text-rose-500 font-medium"
              >
                75
                %
              </span>
              <svg
                class="lucide lucide-chevron-right w-4 h-4 text-muted-foreground opacity-0 group-hover:opacity-100 transition-opacity"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;
